create Product Detail Component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,3 +70,24 @@ button:focus-visible {
 main {
   min-height: 80vh;
 }
+
+.rating span {
+  margin: 0.1 rem;
+}
+
+.rating svg {
+  color: #f8e825;
+}
+
+.rating-text {
+  font-size: 0.8rem;
+  font-weight: 600;
+  padding-left: 0.5rem;
+}
+
+.product-title {
+  height: 2.5em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
