--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -91,3 +91,12 @@ main {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.carousel-caption {
+  position: absolut;
+  width: 100%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+}
